tests/transpiler/x/zig/map_index.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/map_index.zig:6:5: error: expected type 'void', found 'error{AccessDenied,Unexpected,DiskQuota,FileTooBig,InputOutput,NoSpaceLeft,DeviceBusy,InvalidArgument,BrokenPipe,SystemResources,OperationAborted,NotOpenForWriting,LockViolation,WouldBlock,ConnectionResetByPeer}'
/workspace/mochi/tests/transpiler/x/zig/map_index.zig:4:15: note: function cannot return an error
/root/.local/share/mise/installs/zig/0.12.0/lib/std/fmt.zig:471:5: error: invalid format string 's' for type 'i64'
